# inspect-antigravity

./: .gitignore  README.md  pyproject.toml
src/inspect_antigravity/: _addon.py  _registry.py  agentbinary.py  antigravity_cli.py  interceptor.py
src/inspect_antigravity/_util/: _async.py  download.py  messages.py  sandbox.py  trace.py
tests/: _support.py  test_addon_routing.py  test_addon_tool_response.py  test_antigravity_cli.py  test_provisioning.py
