[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inspect-antigravity"
version = "0.1.0"
description = "Standalone Antigravity CLI agent plugin for Inspect AI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "anyio",
    "httpx",
    "inspect_ai>=0.3.244",
    "mitmproxy",
    "requests",
]

[project.entry-points.inspect_ai]
inspect_antigravity = "inspect_antigravity._registry"

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "ruff",
    "types-requests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/inspect_antigravity"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["--strict-config", "--strict-markers"]

[tool.mypy]
strict = true
files = ["src"]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["mitmproxy", "mitmproxy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["inspect_antigravity._addon"]
disable_error_code = ["arg-type"]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "SIM101"]
ignore = ["E203", "E501"]
external = ["ANYIO"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
